feat: 保证Function.getBasicBlocks返回的基本块按插入顺序排列